full-test-2/privileged-container/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
  argocd.argoproj.io/sync-wave: "5"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
